users/user-service/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "user-service"
spec:
  hosts:
  - "*"
  gateways:
  - default/userservice-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: "user-service.user-service.svc.cluster.local"
        port:
          number: 8080
